New API for new product added
