# app/models/auth/branch.rb
@@ -4,5 +4,6 @@ class Auth::Branch < ApplicationRecord
   has_many :branch_policies
   has_many :users, through: :branch_policies
   has_many :users, class_name: "Auth::User", foreign_key: "branch_id"
-  has_many :customers
+  has_many :customers, class_name: "Kyc::Customer", foreign_key: "branch_id"
+  has_many :deposit_products, class_name: "Deposit:DepositProduct", foreign_key: "branch_id"
 end
