# app/models/core/frequency.rb
@@ -1,3 +1,3 @@
 class Core::Frequency < ApplicationRecord
-  has_many :deposit_products, class_name: "Deposit::Product", foreign_key: "interest_posting_frequency_id"
+  has_many :deposit_products, class_name: "Deposit::DepositProduct", foreign_key: "interest_posting_frequency_id"
 end
