# app/models/deposit/deposit_interest_calc_type.rb
@@ -1,3 +1,7 @@
-class Deposit::DepositIntCalcTypes < ApplicationRecord
-  has_many :deposit_products, class_name: "Deposit::Product", foreign_key: "interest_calculation_type_id"
+class Deposit::DepositInterestCalcType < ApplicationRecord
+  has_many :deposit_products, class_name: "Deposit::DepositProduct", foreign_key: "interest_calculation_type_id"
 end
+
+# deposit_int_calc_types
+#
+# deposit_interest_calc_types
